Fix setting output CSS file via GUI.

BUG: 361370